# dataidea

./: .gitignore  pyproject.toml  settings.ini
dataidea/: __init__.py
dataidea.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dataidea/sklearn/: models.py
tests/: test_models.py  test_utils.py
