[tool.poetry]
name = "dataidea"
version = "0.1.27"
description = "A package to simplify common data analysis tasks"
authors = ["jumashafara <jumashafara0@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jumashafara/dataidea"
documentation = "https://docs.dataidea.org"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{include = "dataidea"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "*"
yt-dlp = "*"
numpy = "*"
scikit-learn = "*"
plotly = "*"
requests = "*"
python-dotenv = "*"
rich = "*"
joblib = "*"
scipy = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 