[tool.poetry]
name = "dataidea"
version = "0.1.30"
description = "A package to simplify common data analysis tasks"
authors = ["jumashafara <jumashafara0@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jumashafara/dataidea"
documentation = "https://docs.dataidea.org"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{include = "dataidea"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
# Core dependencies - minimal set
requests = ">=2.25.0"
python-dotenv = ">=0.19.0"
rich = ">=10.0.0"

[tool.poetry.extras]
data = [
    "pandas>=1.3.0",
    "numpy>=1.19.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "joblib>=1.1.0"
]
viz = [
    "plotly>=5.0.0"
]
youtube = [
    "yt-dlp>=2023.1.1"
]
all = [
    "dataidea[data,viz,youtube]"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 